## Process this file with automake to produce Makefile.in.

AUTOMAKE_OPTIONS = 1.7 gnits

noinst_LIBRARIES = libcppi.a

libcppi_a_SOURCES = $(lib_SOURCES)
libcppi_a_LIBADD = $(LIBOBJS)
lib_SOURCES =
EXTRA_DIST =
BUILT_SOURCES =
MOSTLYCLEANFILES =
CLEANFILES =
DISTCLEANFILES =
MAINTAINERCLEANFILES =

include gnulib.mk
